syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/client/packets/pb/service/oidb";

// Accept group request
message OidbSvcTrpcTcp0x10C8 {
  uint32 Accept = 1; // 2 for reject, 1 for accept, 3 for ignore
  optional OidbSvcTrpcTcp0x10C8Body Body = 2;
}

message OidbSvcTrpcTcp0x10C8Body {
  uint64 Sequence = 1; // 1
  uint32 EventType = 2; // 2
  uint32 GroupUin = 3; // 3
  optional string Message = 4; // ""
}
